# library-extension-pytorch

./: README.md
network-code/: CMakeLists.txt  KhushiInference.cpp  script.py
torch-extension/: CMakeLists.txt  cnn.cpp  module_test.py
